--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,24 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
+  <!-- dependencias -->
     <module>tiendamusical-entities</module>
     <module>tiendamusical-data</module>
     <module>tiendamusical-services</module>
     <module>tiendamusical-web</module>
   </modules>
+  
+   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>14</maven.compiler.source>
+    <maven.compiler.target>14</maven.compiler.target>
+    
+    <junit-version>4.11</junit-version>
+    <hibernate-version>5.4.22.Final</hibernate-version>
+    <mysql-connector-version>8.0.22</mysql-connector-version>
+    <spring-data-jpa-version>2.4.0</spring-data-jpa-version>
+    <commons-dbcp2-version>2.8.0</commons-dbcp2-version>
+    <hibernate-jpa-api-version>1.0.2.Final</hibernate-jpa-api-version>
+  </properties>
+  
 </project>
