--- a/tiendamusical-web/pom.xml
+++ b/tiendamusical-web/pom.xml
@@ -6,28 +6,29 @@
     <groupId>com.devpredator</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+<!-- dependencias -->
 
-  <groupId>com.devpredator</groupId>
   <artifactId>tiendamusical-web</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+
   <packaging>war</packaging>
 
   <name>tiendamusical-web Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junit-version}</version>
       <scope>test</scope>
+    </dependency>
+    
+      <!-- ::::::::::::::::DEPENDENCIA PROJECT SERVICES::::::::::::::::::::-->
+    <dependency>
+	    <artifactId>tiendamusical-services</artifactId>
+	    <groupId>com.devpredator</groupId>
+	    <version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
