--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,12 @@
     <hibernate-version>5.4.22.Final</hibernate-version>
     <mysql-connector-version>8.0.22</mysql-connector-version>
     <spring-data-jpa-version>2.4.0</spring-data-jpa-version>
+    <spring-version>5.3.0</spring-version>
     <commons-dbcp2-version>2.8.0</commons-dbcp2-version>
     <hibernate-jpa-api-version>1.0.2.Final</hibernate-jpa-api-version>
+    <jsf-version>2.2.20</jsf-version>
+    <javax.annotation-version>1.3.2</javax.annotation-version>
+    <primefaces-version>8.0</primefaces-version>
   </properties>
   
 </project>
