--- a/tiendamusical-data/pom.xml
+++ b/tiendamusical-data/pom.xml
@@ -44,6 +44,19 @@
 	    <version>${spring-data-jpa-version}</version>
 	</dependency>
 
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>${spring-version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-test</artifactId>
+	    <version>${spring-version}</version>
+	    <scope>test</scope>
+	</dependency>	
+	
+	
 	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
 	<dependency>
 	    <groupId>org.apache.commons</groupId>
