project tiendamusical v1.3 se agregan funcionalidad de log4j permite crear lo en consola y archivos de mensajes y errores

--- a/tiendamusical-data/src/main/resources/config/application-properties.properties
+++ b/tiendamusical-data/src/main/resources/config/application-properties.properties
@@ -4,8 +4,8 @@ spring.datasource.url = jdbc:mysql://tiendamusical-instance.cgclzzc4pcst.us-east
 spring.datasource.username = devpredator
 spring.datasource.password = devpredator
 
-Local.spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-Local.spring.datasource.url = jdbc:mysql://localhost:3306/tienda_musical?serverTimezone=UTC
-Local.spring.datasource.username = root
-Local.spring.datasource.password = admin
+#Local.spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+#Local.spring.datasource.url = jdbc:mysql://localhost:3306/tienda_musical?serverTimezone=UTC
+#Local.spring.datasource.username = root
+#Local.spring.datasource.password = admin
 
