project version 1.4, se agrega detalle de album, badged icono carrito contador de compra.

--- a/tiendamusical-web/pom.xml
+++ b/tiendamusical-web/pom.xml
@@ -65,7 +65,12 @@
 			<artifactId>primefaces</artifactId>
 			<version>${primefaces-version}</version>
 		</dependency>
-
+		<dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>${primefaces-extensions-version}</version>
+        </dependency>
+        
 	</dependencies>
 
 	<build>
