--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
     <primefaces-version>8.0</primefaces-version>
     <log4j.version>2.14.0</log4j.version>
     <primefaces-extensions-version>8.0.4</primefaces-extensions-version>
+    <paypal-checkout-version>1.0.2</paypal-checkout-version>
+    <paypal-json-version>20180813</paypal-json-version>
+    <paypal-commons-version>3.6</paypal-commons-version>
+    <servlet-api-version>3.1.0</servlet-api-version>
+    <gson-version>2.8.6</gson-version>
   </properties>
   
 </project>
