logon ir a dashboear, icono carrito agregar 1 producto en busqueda

--- a/tiendamusical-data/src/main/resources/config/application-properties.properties
+++ b/tiendamusical-data/src/main/resources/config/application-properties.properties
@@ -9,3 +9,9 @@ spring.datasource.password = devpredator
 #Local.spring.datasource.username = root
 #Local.spring.datasource.password = admin
 
+spring.base.url.ws.reportes = http://localhost:8080/tiendamusical-reportes/devpredator/reportesWS
+
+prueba de pago 
+email:     sb-kamkf17897225@personal.example.com
+password:  ]6X)0_cE
+            
