--- a/tiendamusical-services/pom.xml
+++ b/tiendamusical-services/pom.xml
@@ -49,6 +49,24 @@
 	    <version>${paypal-commons-version}</version>
     </dependency>
     
+			<!-- permite consumir un servicio con jersey -->
+			<dependency>
+				<groupId>org.glassfish.jersey.media</groupId>
+				<artifactId>jersey-media-json-jackson</artifactId>
+				<version>${jersey-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.glassfish.jersey.core</groupId>
+				<artifactId>jersey-client</artifactId>
+				<version>${jersey-version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.glassfish.jersey.inject</groupId>
+				<artifactId>jersey-hk2</artifactId>
+				<version>${jersey-hk2}</version>
+			</dependency>
   </dependencies>
 
   <build>
