--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
     <paypal-commons-version>3.6</paypal-commons-version>
     <servlet-api-version>3.1.0</servlet-api-version>
     <gson-version>2.8.6</gson-version>
+    <jersey-version>2.31</jersey-version>
+    <jersey-hk2>2.28</jersey-hk2>
   </properties>
   
 </project>
