project tiendamusical-v1.9_misCompras_infoPersonal se agrega funcionalidad para ver mis compras realizadas y actualizar los datos personales del cliente

--- a/tiendamusical-data/src/main/resources/config/application-properties.properties
+++ b/tiendamusical-data/src/main/resources/config/application-properties.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://tiendamusical-instance.cgclzzc4pcst.us-east-1.rds.amazonaws.com/tienda_musical?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://tiendamusical-instance.cgclzzc4pcst.us-east-1.rds.amazonaws.com:3306/tienda_musical?serverTimezone=UTC
 spring.datasource.username = devpredator
 spring.datasource.password = devpredator
 
@@ -9,7 +9,13 @@ spring.datasource.password = devpredator
 #Local.spring.datasource.username = root
 #Local.spring.datasource.password = admin
 
-spring.base.url.ws.reportes = http://localhost:8080/tiendamusical-reportes/devpredator/reportesWS
+#::::::::::::::::::::::::::::::local::::::::::::::::::::::::::::::::::
+
+#spring.base.url.ws.reportes = http://localhost:8080/tiendamusical-reportes/devpredator/reportesWS
+
+#::::::::::::::::::::::::::::::reportes aws::::::::::::::::::::::::::::::::::
+
+spring.base.url.ws.reportes = http://tiendamusicalreportes-env.eba-6vjvp3vm.us-east-1.elasticbeanstalk.com/devpredator/reportesWS
 
 prueba de pago 
 email:     sb-kamkf17897225@personal.example.com
