--- a/tiendamusical-web/src/main/webapp/WEB-INF/web.xml
+++ b/tiendamusical-web/src/main/webapp/WEB-INF/web.xml
@@ -38,5 +38,19 @@
 		<servlet-name>FacesServlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
+	
+	<session-config>
+		<session-timeout>1</session-timeout>
+	</session-config>
+	
+	<filter>
+		<filter-name>Login Filter</filter-name>
+		<filter-class>com.debpredator.tiendamusicalweb.filter.LoginFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>Login Filter</filter-name>
+		<url-pattern>/pages/*</url-pattern>
+	</filter-mapping>
 </web-app>
 
